Working zoom behavior for the tempgraph

--- a/kiln/template.html
+++ b/kiln/template.html
@@ -42,6 +42,12 @@
         height:500px;
       }
 
+      rect.pane {
+        cursor: move;
+        fill: none;
+        pointer-events: all;
+      }
+
     </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
