--- a/kiln/template.html
+++ b/kiln/template.html
@@ -24,17 +24,18 @@
         width:7% !important;
       }
 
-      .axis path,
-      .axis line {
-        fill: none;
-        stroke: #000;
-        shape-rendering: crispEdges;
-      }
-
-      .line {
+      .temperature {
         fill: none;
         stroke: steelblue;
         stroke-width: 1.5px;
+      }
+      
+      .axis .tick{
+        stroke:#DDD;
+        stroke-width:.5px;
+      }
+      .domain{
+        display:none;
       }
 
       #graph {
@@ -46,6 +47,17 @@
         cursor: move;
         fill: none;
         pointer-events: all;
+      }
+
+      #stop-button {
+        margin-left:10px;
+        margin-right:10px;
+      }
+
+      #current_temp {
+        font-weight:bold;
+        font-size:200%;
+        color:black;
       }
 
     </style>
@@ -78,12 +90,13 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><div id="current_temp">Temperature</div></a>
               <ul class="dropdown-menu" role="menu">
-                <li class="active"><a href="#">°F</a></li>
-                <li><a href="#">°C</a></li>
-                <li><a href="#">Δ</a></li>
-              </ul></li>
+                <li class="active"><a href="#" id="temp_scale_F">°F</a></li>
+                <li><a href="#" id="temp_scale_C">°C</a></li>
+                <li><a href="#" id="temp_scale_cone">Δ</a></li>
+              </ul>
+            </li>
             <li><a href="#" id="current_time">Time</a></li>
-            <li><a href="#" id="current_output">0%</a></li>
+            <li><a href="#" id="current_output_text">0%</a></li>
             <li><button id="stop-button" class="btn btn-primary navbar-btn hidden" href="#">Stop</button></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -96,16 +109,19 @@
       <div class="row">
         <div class="col-sm-8 col-md-8 row-space">
           <svg id="graph" class="row-space"></svg>
+          <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+          <script type="text/javascript" src="temp_graph.js"></script>
+          <script type="text/javascript" src="temp_monitor.js"></script>
           
           <div class="btn-group btn-group-justified row-space">
             <div class="btn-group">
-              <button type="button" class="btn btn-primary disabled">Off</button>
+              <button type="button" class="btn btn-primary disabled"><span class="glyphicon glyphicon-stop"></span> Off</button>
             </div>
             <div class="btn-group output-slider">
-              <input type="range" min=0 max=1000 class="btn btn-default" />
+              <input id="current_output" type="range" min=0 max=1000 class="btn btn-default" />
             </div>
             <div class="btn-group">
-              <button type="button" class="btn btn-danger">Ignite</button>
+              <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-fire"></span> Ignite</button>
             </div>
           </div>
         </div>
@@ -119,10 +135,20 @@
                 </ul>
               </div><!-- /btn-group -->
             </div><!-- /input-group -->
-            <div class='btn-group btn-group-justified row-space'>
-              <a href="#" class="btn btn-primary disabled"> Start <span class="glyphicon glyphicon-play"></span></a>
-              <a href="#" class="btn btn-default disabled"> Pause <span class="glyphicon glyphicon-pause"></span></a>
-              <a href="#" class="btn btn-success disabled"> Save <span class="glyphicon glyphicon-floppy-disk"></span></a>
+            <div id='profile_info' class='panel panel-default hidden'>
+              <div class='panel-body'>
+                <dl class='dl-horizontal'>
+                  <dt>Total time</dt>
+                  <dd></dd>
+                  <dt>Finish at</dt>
+                  <dd></dd>
+                </dl>
+              </div>
+            </div>
+            <div id='profile_actions' class='btn-group btn-group-justified row-space hidden'>
+              <a href="#" class="btn btn-primary disabled"><span class="glyphicon glyphicon-play"></span> Start</a>
+              <a href="#" class="btn btn-default disabled"><span class="glyphicon glyphicon-pause"></span> Pause</a>
+              <a href="#" class="btn btn-success disabled"><span class="glyphicon glyphicon-floppy-disk"></span> Save</a>
             </div>
             <img src="http://placehold.it/640x480/" class="img-responsive" alt="webcam" />
           </div>
@@ -133,7 +159,5 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="temp_graph.js"></script>
   </body>
 </html>
