--- a/kiln/template.html
+++ b/kiln/template.html
@@ -43,13 +43,7 @@
         height:500px;
       }
 
-      rect.pane {
-        cursor: move;
-        fill: none;
-        pointer-events: all;
-      }
-
-      #stop-button {
+      #stop_button_navbar {
         margin-left:10px;
         margin-right:10px;
       }
@@ -92,12 +86,12 @@
               <ul class="dropdown-menu" role="menu">
                 <li class="active"><a href="#" id="temp_scale_F">°F</a></li>
                 <li><a href="#" id="temp_scale_C">°C</a></li>
-                <li><a href="#" id="temp_scale_cone">Δ</a></li>
+                <!--<li><a href="#" id="temp_scale_cone">Δ</a></li>-->
               </ul>
             </li>
             <li><a href="#" id="current_time">Time</a></li>
             <li><a href="#" id="current_output_text">0%</a></li>
-            <li><button id="stop-button" class="btn btn-primary navbar-btn hidden" href="#">Stop</button></li>
+            <li><button id="stop_button_navbar" class="btn btn-primary navbar-btn hidden" href="#">Stop</button></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -112,13 +106,13 @@
           
           <div class="btn-group btn-group-justified row-space">
             <div class="btn-group">
-              <button type="button" class="btn btn-primary disabled"><span class="glyphicon glyphicon-stop"></span> Off</button>
+              <button id="stop_button" type="button" class="btn btn-primary disabled"><span class="glyphicon glyphicon-stop"></span> Off</button>
             </div>
             <div class="btn-group output-slider">
-              <input id="current_output" type="range" min=0 max=1000 class="btn btn-default" />
+              <input id="current_output" type="range" min=0 max=1000 value=0 class="btn btn-default" disabled="disabled" />
             </div>
             <div class="btn-group">
-              <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-fire"></span> Ignite</button>
+              <button id="ignite_button" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-fire"></span> Ignite</button>
             </div>
           </div>
         </div>
@@ -159,5 +153,12 @@
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="temp_graph.js"></script>
     <script type="text/javascript" src="temp_monitor.js"></script>
+    <script type="text/javascript">
+    var monitor;
+    d3.json("temperature.json", function(error, data) {
+        monitor = new tempgraph.Monitor(data);
+        monitor.set_state("{{ state }}");
+    });
+    </script>
   </body>
 </html>
